@@ -1,3 +1,9 @@
+2005-09-26 Hasso Tepper <hasso at quagga.net>
+
+	* isisd.[ch]: Introduce oldmetric flag for area and transition
+	  metricstyle command. With metricstyle wide only extended TLVs
+	  should be used.
+
 2005-09-25 Hasso Tepper <hasso at quagga.net>
 
 	* dict.[ch]: Revert all nonfunctional changes. It's external module
